# ApproximateAtMostK

./: .gitignore  ApproximateAtMostK.cabal  AtMostK.cabal  CHANGELOG.md  CITATION.cff  README.md  ShouldBeSAT.cnf  ShouldBeUNSAT.cnf  TheBestEfficiencies.txt  TheBestEfficienciesInit.txt  dmy.txt  out.txt  problem((([(2,3)],2),3),(1,1))-approx-SATUNSAT.txt  problem((([(2,3)],2),3),(1,1))-approx-time.txt
.stack-work/: stack.sqlite3
SolutionSpaceRateInRandom/: False((([(11,2)],2),4),(14,0)).txt  False((([(12,2)],2),4),(18,0)).txt  False((([(12,2)],2),5),(18,0)).txt  False((([(12,2)],2),7),(18,0)).txt  False((([(13,2)],2),4),(21,1)).txt  False((([(13,2)],2),6),(22,0)).txt  False((([(13,2)],2),7),(22,0)).txt  False((([(14,2)],2),4),(26,0)).txt  False((([(14,2)],2),7),(25,1)).txt  False((([(2,10)],2),5),(9,1)).txt  False((([(2,10)],2),6),(9,1)).txt  False((([(2,11)],2),7),(13,1)).txt  False((([(2,12)],2),6),(17,1)).txt  False((([(2,12)],2),6),(18,0)).txt  False((([(2,12)],2),7),(18,0)).txt  False((([(2,13)],2),6),(21,1)).txt  False((([(2,13)],2),7),(22,0)).txt  False((([(2,14)],2),6),(25,1)).txt  False((([(2,14)],2),6),(26,0)).txt  False((([(2,14)],2),7),(25,1)).txt  False((([(2,2),(2,2),(2,2)],2),2),(0,0)).txt  False((([(2,2),(2,2),(2,2)],3),1),(18,0)).txt  False((([(2,2),(2,2),(2,3)],2),1),(13,5)).txt  False((([(2,2),(2,2),(2,3)],2),1),(15,3)).txt  False((([(2,2),(2,2),(2,3)],2),1),(16,2)).txt  False((([(2,2),(2,2)],4),1),(1,1)).txt  False((([(2,2),(2,2)],5),2),(4,6)).txt  False((([(2,2),(2,2)],6),1),(13,5)).txt  False((([(2,2),(2,2)],6),1),(18,0)).txt  False((([(2,2),(2,2)],7),1),(25,1)).txt  False((([(2,2),(2,3),(2,2)],2),1),(13,5)).txt  False((([(2,2),(2,3),(2,2)],2),1),(15,3)).txt  False((([(2,2),(2,3),(2,2)],2),1),(18,0)).txt  False((([(2,2),(2,3)],3),2),(1,5)).txt  False((([(2,2),(2,3)],4),1),(13,5)).txt  False((([(2,2),(2,4)],2),1),(1,1)).txt  False((([(2,2),(2,4)],2),2),(0,2)).txt  False((([(2,2),(2,4)],3),1),(17,1)).txt  False((([(2,2),(2,4)],3),2),(7,11)).txt  False((([(2,2),(2,5)],2),2),(1,9)).txt  (+544 more)
SolutionSpaceRatioInRandom/: False((([(10,2)],2),4),(10,0)).txt  False((([(10,2)],2),5),(9,1)).txt  False((([(10,2)],2),6),(9,1)).txt  False((([(11,2)],2),7),(14,0)).txt  False((([(12,2)],2),5),(17,1)).txt  False((([(12,2)],2),6),(17,1)).txt  False((([(12,2)],2),6),(18,0)).txt  False((([(13,2)],2),4),(22,0)).txt  False((([(13,2)],2),7),(21,1)).txt  False((([(14,2)],2),6),(25,1)).txt  False((([(2,11)],2),4),(14,0)).txt  False((([(2,11)],2),5),(13,1)).txt  False((([(2,11)],2),7),(14,0)).txt  False((([(2,12)],2),4),(17,1)).txt  False((([(2,12)],2),4),(18,0)).txt  False((([(2,12)],2),7),(17,1)).txt  False((([(2,13)],2),4),(21,1)).txt  False((([(2,13)],2),4),(22,0)).txt  False((([(2,13)],2),6),(22,0)).txt  False((([(2,13)],2),7),(21,1)).txt  False((([(2,14)],2),5),(26,0)).txt  False((([(2,2),(2,2),(2,2)],2),1),(2,0)).txt  False((([(2,2),(2,2),(2,2)],2),2),(0,2)).txt  False((([(2,2),(2,2),(2,2)],3),1),(15,3)).txt  False((([(2,2),(2,2),(2,2)],3),1),(16,2)).txt  (+552 more)
(+1352 files in other folders)
